2018-12-06  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi (compile Procedure): Remove old node.
	(archive Procedure): Likewise.
	(ranlib Procedure): Likewise.

2018-12-06  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi (rsh procedure): Fix node connectivity.

2018-12-06  Ben Elliston  <bje@gnu.org>

 	* lib/telnet.exp (telnet_open): Remove connectmode global.
	* doc/dejagnu.texi (Procedures For Remote Communication): Remove
	mention of connectmode.

2018-12-05  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi (execute_anywhere Procedure): Remove obsolete
	node.

2018-12-05  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi: Add more missing material.

2018-12-05  Ben Elliston  <bje@gnu.org>

	* testsuite/runtest.all/utils.test: Test runtest_file_p.

2018-12-05  Jacob Bachmeyer  <jcb62281@gmail.com>

	* runtest.exp (load_config): Remove unused globals.
	(load_generic_config): Likewise.
	(load_board_description): Likewise.
	(load_base_board_description): Likewise.

2018-12-05  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp (grep): Handle -n.
	* doc/dejagnu.texi (grep procedure): Document it.
	* testsuite/runtest.all/utils.test: Add a test case.
	* NEWS: Add an item.

2018-12-05  Ben Elliston  <bje@gnu.org>

	* testsuite/runtest.all/utils.test: Test diff.

2018-12-04  Ben Elliston  <bje@gnu.org>

	* testsuite/runtest.all/utils.test: Test grep.

2018-12-04  Ben Elliston  <bje@gnu.org>

	* testsuite/runtest.all/utils.test (which): Fail on the else path,
	don't pass in either case.

2018-12-04  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi (Libgloss): Improve documentation.
	(Debugging Procedures): Likewise.

2018-12-04  Ben Elliston  <bje@gnu.org>

	* lib/debugger.exp (dumprocs): Fix proc comment.

2018-12-04  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi (Utility Procedures): Improve documentation for
	the procedures in this section.

2018-12-04  Jacob Bachmeyer  <jcb62281@gmail.com>

	* NEWS: Document new relative_filename procedure and --local_init/