@@ -1,3 +1,7 @@
+2018-12-06  Jacob Bachmeyer  <jcb62281@gmail.com>
+
+	* runtest.exp: Replace archaic use of [string match] with "eq".
+
 2018-12-06  Ben Elliston  <bje@gnu.org>
 
 	* doc/dejagnu.texi (compile Procedure): Remove old node.
